fix: run GraalPy on the optimizing runtime